--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -92,7 +92,10 @@ nav a {
 
 main {
     max-width: 1140px;
+}
 
+main section {
+    margin-top: 130px;
 }
 
 .about {
@@ -116,10 +119,69 @@ main {
     font-weight: 400;
     line-height: 30px;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+#What-i-do-description {
+    padding: 30px 150px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill_description {
+    color: var(--dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.resume-column-title {
+    color: #474747);
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-institute,
+.resume-item-description {
+    color: #757575;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-container hr{
+    margin: 30px;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
