--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -90,6 +90,11 @@ nav a {
     color: #757575;
 }
 
+main {
+    max-width: 1140px;
+
+}
+
 .about {
     padding: 130px;
     border-radius: 10px;
@@ -110,4 +115,11 @@ nav a {
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
